[package]
name = "rusty-pixels-poc"
description = "just a proof-of-concept seeing what the rust pixels crate can do"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Walters <chrwalte@protonmail.com>"]
readme = "README.md"
repository = "https://www.github.com/chrwalte/Rusty-Pixels-POC"
documentation = "README.md"
keywords = ["POC", "proof-of-concept", "pixels", "fltk"]
categories = ["POC", "proof-of-concept", "pixels", "fltk"]

# not used
# license-file = "LICENSE.txt"
# exclude = [""]
# include = [""]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# used to print pixels to the screen
pixels = "0.9"
# used to show window application
fltk = { version = "1.3", features = ["raw-window-handle", "no-images", "no-pango"] }
# used to generate some random data
rand = "0.8"
# used to convert string hex values to a u8 slice
hex = "0.4"
